--- a/client/wfnews-war/src/main/angular/src/app/components/disclaimer-dialog/disclaimer-dialog.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/disclaimer-dialog/disclaimer-dialog.component.scss
@@ -29,6 +29,7 @@
                 padding:5px 0
             }
             a{
+                color: #0e5fa9;
                 text-decoration: none;
             }
         }
