--- a/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.scss
@@ -73,6 +73,14 @@
         padding-left: 10px;
       }
     }
+
+    .disclaimer-dropdown{
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: #EEE;;
+      height: 36px;
+    }
   }
 
   .title {
