Add filename to map download, ensure .pdf extension

--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-maps-panel/incident-maps-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-maps-panel/incident-maps-panel.component.html
@@ -6,7 +6,7 @@
         <div class="content-panel-stack">
             <div *ngFor="let map of maps">
                 <div style="display: flex;">
-                    <div class="file-pdf-icon" (click)="downloadMap(map.link)"></div>
+                    <div class="file-pdf-icon" (click)="downloadMap(map.link, map.name)"></div>
                     <div>
                         <div class="document-title">{{map.name}}</div>
                         <div class="document-date">{{map.date}}</div>
