Force colour on links

--- a/client/wfnews-war/src/main/angular/src/app/components/wildfire-resources/resource-panel/resource-panel.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/wildfire-resources/resource-panel/resource-panel.component.scss
@@ -28,6 +28,7 @@
       color: #0e5fa9;
       padding-bottom: 10px;
       a {
+        color: #0e5fa9;
         text-decoration: none;
       }
     }
