Only show current stats on fires this year

--- a/client/wfnews-war/src/main/angular/src/app/components/wf-stats-component/wf-stats.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/wf-stats-component/wf-stats.component.html
@@ -166,7 +166,7 @@
         </div>
       </div>
     </div>
-    <div>
+    <div *ngIf="tabIndex === 1">
       <h2>Current Statistics</h2>
       <h5 style="text-align: center; margin: 0px;">New fires are those that have been ignited within the last 24 hours</h5>
       <div class="info-text">
