--- a/client/wfnews-war/src/main/angular/src/app/components/wildfires-list/wildfires-list.component.desktop.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/wildfires-list/wildfires-list.component.desktop.html
@@ -56,7 +56,7 @@
         <div class="field">
           <div class="my-location-button">
             <button mat-raised-button (click)="useMyCurrentLocation()" style="width: 100%">
-              <mat-icon>my_location</mat-icon><span style="width: 100%;">My Location</span>
+              <mat-icon>my_location</mat-icon><span style="width: 100%;">Find My Location</span>
             </button>
           </div>
         </div>
