--- a/client/wfnews-war/src/main/angular/src/app/components/wf-stats-component/wf-stats.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/wf-stats-component/wf-stats.component.scss
@@ -58,7 +58,7 @@ mat-tab-group {
   height: auto;
   overflow: hidden;
   font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
-  padding: 20px;
+  padding: 40px;
   margin: auto;
   background-color: white;
   max-width: 1300px;
@@ -69,6 +69,7 @@ mat-tab-group {
     padding-bottom: 0;
     color: #1c5a97;
     text-align: center;
+    padding-top: 80px;
   }
 }
 
@@ -127,7 +128,8 @@ mat-tab-group {
   border-radius: 3px;
   background: white;
   font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
+  margin-top: 40px;
   width: 300px;
   .title {
     color: black;
@@ -188,7 +190,7 @@ mat-tab-group {
   flex-flow: row;
   flex-wrap: wrap;
   border-bottom: 1px solid #e9eff5;
-  padding-bottom: 20px;
+  padding-bottom: 80px;
   .info-text {
     padding: 5px;
     width: 45%;
