--- a/client/wfnews-war/src/main/angular/src/app/components/disclaimer-dialog/disclaimer-dialog.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/disclaimer-dialog/disclaimer-dialog.component.html
@@ -15,11 +15,10 @@
                         <div>Wildfire perimeters for the current fire season, including both active fires and fires that have been declared out, are obtained from various sources. When data becomes available, it is refreshed from operational systems every five minutes to the public map.  The levels of current fire activity within the mapped fire perimeters can vary widely, so therefore the data may not reflect the current fire situation. This information should only be used for reference purposes. In the event that the fire perimeters overlay areas where private property or infrastructure is present, the perimeters do not indicate what level of damage (if any) may have occurred.</div> 
 
                         <div>The Province receives Evacuation Orders and Alerts information from local governments and First Nations when it becomes available. The BC Wildfire Service and GeoBC make no warranties or guarantees, either expressed or implied, as to the completeness, accuracy or correctness of the data, nor accept any liability arising from any incorrect, incomplete or misleading information contained therein. Emergency data may not reflect the current emergency situation, and therefore should only be used for reference purposes. 
-                            <strong>For the latest Evacuation Orders and Alerts information, please consult the appropriate local government. For further information regarding the Evacuation Orders and Alerts data, please contact the individual(s) identified in the 
-                                <a href="https://catalogue.data.gov.bc.ca/dataset/7efd46d0-b5d3-4dff-af80-d376c42aec33" target="_blank" rel="noopener">
-                                    data catalogue.
-                                </a>
-                            </strong>
+                            <b>For the latest Evacuation Orders and Alerts information, please consult the appropriate local government. For further information regarding the Evacuation Orders and Alerts data, please contact the individual(s) identified in the </b>
+                            <a href="https://catalogue.data.gov.bc.ca/dataset/7efd46d0-b5d3-4dff-af80-d376c42aec33" target="_blank" rel="noopener">
+                                data catalogue.
+                            </a>
                         </div>
 
                         <div>Fire prohibitions and restrictions apply to all public and private land, unless specified otherwise (in a local government bylaw, for example). Please check with local government authorities for any other restrictions before lighting any fire. The "Fire Danger Rating" layer on this map is intended for general information only and should not be relied on as accurate for a specific location due to variability in local site and weather conditions. Information is updated on a daily basis as soon as is practicable. Where discrepancies exist between this layer and the source information located on the 
