--- a/client/wfnews-war/src/main/angular/src/app/components/disclaimer-dialog/disclaimer-dialog.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/disclaimer-dialog/disclaimer-dialog.component.scss
@@ -8,6 +8,10 @@
     border-bottom-style: solid;
     border-bottom-width: 2px;
   }
+
+  .dialog-content{
+    margin: 0 !important
+  }
 }
 
   .panel{
@@ -30,7 +34,8 @@
             }
             a{
                 color: #0e5fa9;
-                text-decoration: none;
+                text-decoration: none !important;
+                outline-offset: none !important;
             }
         }
     }
