--- a/client/wfnews-war/src/main/angular/src/app/components/incident-identify-panel/incident-identify-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/incident-identify-panel/incident-identify-panel.component.html
@@ -34,10 +34,14 @@
   <div class="info-panel">
     <div class="gutter"><span class="label">Size: </span><span>{{incident.incidentSizeEstimatedHa ? incident.incidentSizeEstimatedHa.toLocaleString() : 0}} Hectares</span></div>
     <div class="paragraph-format">Fire size is estimated and based on the last known mapped size in hectares. This information could be out-of-date at this time due to rapidly changing conditions</div>
-    <div class="gutter"><span class="label">Location</span></div>
-    <div class="paragraph-format">{{incident.incidentLocation}}</div>
-    <div class="gutter"><span class="label">Traditional Territory</span></div>
-    <div class="paragraph-format">{{incident.traditionalTerritoryDetail}}</div>
+    <div *ngIf="incident.incidentLocation">
+      <div class="gutter"><span class="label">Location</span></div>
+      <div class="paragraph-format">{{incident.incidentLocation}}</div>
+    </div>
+    <div *ngIf="incident.traditionalTerritoryDetail">
+      <div class="gutter"><span class="label">Traditional Territory</span></div>
+      <div class="paragraph-format">{{incident.traditionalTerritoryDetail}}</div>
+    </div>
   </div>
   <!-- Evac Orders-->
   <div *ngIf="evacOrders.length > 0" class="divider"></div>
