--- a/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.html
@@ -93,7 +93,7 @@
                     <span class="item-content">{{calculateDistance(Number(incident.latitude), Number(incident.longitude))}} km</span>
                 </div>
                 <div class="tags">
-                    <span *ngIf="incident.fireOfNoteInd" class="wildifre-of-note-tag">
+                    <span *ngIf="incident.fireOfNoteInd" class="wildifire-of-note-tag">
                         <mat-icon class="fire-icon" style="vertical-align:middle">local_fire_department</mat-icon>
                         Wildfire of Note
                     </span>
