--- a/client/wfnews-war/src/main/angular/src/app/components/incident-identify-panel/incident-identify-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/incident-identify-panel/incident-identify-panel.component.html
@@ -25,14 +25,14 @@
     <button style="background: #1a5a96; color: white;" mat-button color="primary" (click)="goToIncidentDetail()">Full Incident Details</button>
   </div>
   <div class="info-panel">
-    <div><span class="label">Fire Number: </span><span>{{convertFireNumber(incident)}}</span></div>
-    <div><span class="label">Last Updated: </span><span>{{incident.lastUpdatedTimestamp}}</span></div>
-    <div><span class="label">Discovered On: </span><span>{{incident.discoveryDate}}</span></div>
+    <div><span class="label">Fire Number: </span><span class="paragraph-format">{{convertFireNumber(incident)}}</span></div>
+    <div><span class="label">Last Updated: </span><span class="paragraph-format">{{incident.lastUpdatedTimestamp}}</span></div>
+    <div><span class="label">Discovered On: </span><span class="paragraph-format">{{incident.discoveryDate}}</span></div>
     <div *ngIf="incident.stageOfControlCode === 'OUT'"><span class="label">Declared Out: </span><span>{{incident.declaredOutDate}}</span></div>
   </div>
   <div class="divider"></div>
   <div class="info-panel">
-    <div class="gutter"><span class="label">Size: </span><span>{{incident.incidentSizeEstimatedHa ? incident.incidentSizeEstimatedHa.toLocaleString() : 0}} Hectares</span></div>
+    <div class="gutter"><span class="label">Size: </span><span class="paragraph-format">{{incident.incidentSizeEstimatedHa ? incident.incidentSizeEstimatedHa.toLocaleString() : 0}} Hectares</span></div>
     <div class="paragraph-format">Fire size is estimated and based on the last known mapped size in hectares. This information could be out-of-date at this time due to rapidly changing conditions</div>
     <div *ngIf="incident.incidentLocation">
       <div class="gutter"><span class="label">Location</span></div>
