--- a/client/wfnews-war/src/main/angular/src/app/components/incident-identify-panel/incident-identify-panel.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/incident-identify-panel/incident-identify-panel.component.scss
@@ -53,6 +53,9 @@
     .label {
       color: #036;
     }
+    .paragraph-format{
+      font-size: 15px;
+    }
   }
   .divider {
     border-bottom: 1px lightgray solid;
