--- a/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.scss
@@ -248,7 +248,7 @@ section {
     }
     .tags{
         padding: 1rem 0;
-        .wildifre-of-note-tag{
+        .wildifire-of-note-tag{
             padding: 5px 10px;
             width: fit-content;
             border-radius: 40px;
@@ -256,11 +256,13 @@ section {
             background-color: #AA1D3E;
             border: 1px solid;
             margin-right: 0.5rem;
+            font-size: 15px;
         }
         .stage-of-control-status-indicator{
             padding: 5px 10px;
             width: fit-content;
             border-radius: 40px;
+            font-size: 15px;
 
             &.HOLDING{
                 color: #6C4A00;
