WFNEWS-883: Remove the paging control on count

--- a/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.scss
@@ -287,6 +287,7 @@ section {
     width:16px;
     height: 16px;
     vertical-align: middle;
+    margin-top: -4px;
     &.HOLDING{
         background-color: #ffd966;
         border-radius: 50%;
