--- a/client/wfnews-war/src/main/angular/src/app/components/incident-identify-panel/incident-identify-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/incident-identify-panel/incident-identify-panel.component.html
@@ -67,8 +67,8 @@
         <div class="image-label">Aviation</div>
       </div>
       <div *ngIf="incident.incidentMgmtCrewRsrcInd" class="resource-icon">
-        <img class="image-size" src="../../../assets/images/svg-icons/incident-management-teams.svg" alt="Incident Management Teams" />
-        <div class="image-label">Incident Management Teams</div>
+        <img class="image-size" src="../../../assets/images/svg-icons/incident-management-teams.svg" alt="Incident Management Team" />
+        <div class="image-label">Incident Management Team</div>
       </div>
       <div *ngIf="incident.heavyEquipmentResourcesInd" class="resource-icon">
         <img class="image-size" src="../../../assets/images/svg-icons/heavy_equipment.svg" alt="Heavy Equipment" />
