--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel/incident-info-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel/incident-info-panel.component.html
@@ -140,10 +140,10 @@
       <!-- Incident Management Teams -->
       <div *ngIf="incident.incidentMgmtCrewRsrcInd && incident.incidentMgmtCrewRsrcDetail"  class="resource-panel">
         <div class="resource-panel-icon">
-          <img class="image-size" src="../../../assets/images/svg-icons/incident-management-teams.svg" alt="Incident Management Teams" />
+          <img class="image-size" src="../../../assets/images/svg-icons/incident-management-teams.svg" alt="Incident Management Team" />
         </div>
         <div class="resource-panel-content">
-          <h3>Incident Management Teams</h3>
+          <h3>Incident Management Team</h3>
           <div class="content-panel-body">
             <div [innerHTML]="incident.incidentMgmtCrewRsrcDetail"></div>
           </div>
