--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-maps-panel/incident-maps-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-maps-panel/incident-maps-panel.component.html
@@ -3,7 +3,7 @@
       <h4>Wildfire Maps</h4>
     </div>
     <div class="content-panel">
-        <div class="content-panel-stack">
+        <div class="content-panel-stack" *ngIf="maps && maps.length; else showDisclaimer">
             <div *ngFor="let map of maps">
                 <div style="display: flex;">
                     <div class="file-pdf-icon" (click)="downloadMap(map.link, map.name)"></div>
@@ -14,5 +14,8 @@
                 </div>
             </div>
         </div>
+        <ng-template #showDisclaimer>
+            There are currently no maps associated with this incident.
+        </ng-template>
     </div>
 </div>
